--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: $color-primary-dark;
+  position: relative;
   bottom: 0;
 
   .content {
